<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF000000"
    android:padding="32dp">

    <TextView
        android:id="@+id/gameOverTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/game_over"
        android:textAllCaps="true"
        android:textSize="48sp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="32dp"/>

    <TextView
        android:id="@+id/scoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_game_over"
        android:textSize="32sp"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/streakTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/streak_game_over"
        android:textSize="32sp"
        android:textColor="@android:color/white"
        android:layout_marginBottom="32dp"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/extraMessageScoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp"
        android:textColor="@android:color/holo_red_light"
        android:layout_gravity="center"
        android:visibility="gone"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/highScoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/high_score"
        android:textSize="24sp"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="16dp"/>
    <TextView
        android:id="@+id/extraMessageStreakTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp"
        android:textColor="@android:color/holo_red_light"
        android:layout_gravity="center"
        android:visibility="gone"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/highStreakTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/longest_streak"
        android:textSize="24sp"
        android:textColor="@android:color/white"
        android:layout_marginBottom="32dp"
        android:layout_gravity="center_horizontal"/>


    <Button
        android:id="@+id/playAgainButton"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:text="@string/play_again"
        android:textSize="24sp"
        android:backgroundTint="#2196F3"
        android:textColor="#FFFFFF"/>

</LinearLayout>
