<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".GameCompletedActivity"
    android:background="#222222"
    android:padding="24dp">

    <!-- Título motivador -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/game_finish"
        android:textColor="#E6FF00"
        android:textSize="36sp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Mensaje de felicitaciones -->
    <TextView
        android:id="@+id/tvPhraseWin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="#FFA000"
        android:textSize="22sp"
        android:gravity="center"
        android:layout_marginTop="12dp"
        android:paddingHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />




    <LinearLayout
        android:id="@+id/viewStatsWin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/tvPhraseWin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvMotivation"
        android:gravity="center"
        >
        <!-- Score -->
        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/tvScore"
            android:layout_height="wrap_content"
            android:text="@string/score_game_over"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:gravity="center"
            />

        <!-- Max Streak -->
        <TextView
            android:id="@+id/tvMaxStreak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/streak_game_over"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@id/tvMotivation"/>

        <!-- New High Score -->
        <TextView
            android:id="@+id/tvHighScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_high_score"
            android:textColor="#FFD700"
            android:textSize="26sp"
            android:gravity="center"
            android:visibility="gone" />

        <!-- New High Streak -->
        <TextView
            android:id="@+id/tvHighStreak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_high_streak"
            android:textColor="#FFD700"
            android:textSize="26sp"
            android:gravity="center"
            android:visibility="gone" />


    </LinearLayout>


    <!-- Motivational Message -->
    <TextView
        android:id="@+id/tvMotivation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/msj_final_win"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:gravity="center"
        android:paddingHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/viewStatsWin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnRestart"/>

    <!-- Botón Play Again grande -->
    <Button
        android:id="@+id/btnRestart"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:text="@string/play_again"
        android:textSize="28sp"
        android:backgroundTint="#1985D2"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@id/tvMotivation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="40dp"/>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0"/>
</androidx.constraintlayout.widget.ConstraintLayout>
