<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menuRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_start"
    tools:context=".MainMenuActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/gameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textColor="#FFD700"
        android:textSize="64sp"
        android:textStyle="bold"
        android:layout_marginTop="135dp"
        android:shadowColor="#000000"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="10" />

    <!-- Botón START -->
    <Button
        android:id="@+id/startButton"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:text="@string/start"
        android:textSize="28sp"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:backgroundTint="#1976D2"
        android:layout_marginTop="50dp"
        android:shadowColor="#000000"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="10"/>


    <TextView
        android:id="@+id/tvYourHighScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_high_score"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:layout_marginBottom="16dp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        android:shadowColor="#000000"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="10"/>


    <TextView
        android:id="@+id/tvYourLongestStreak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_longest_streak"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginBottom="32dp"
        android:layout_gravity="center_horizontal"
        android:shadowColor="#000000"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="10"/>


</LinearLayout>
